--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-conn = 35.238.149.182
+conn = mysql -h bmrrzuuas1qtarn74jhh-mysql.services.clever-cloud.com -P 3306 -u umtotl5ua1udagu7 -p bmrrzuuas1qtarn74jhh
 port = 3001
